cmake_minimum_required(VERSION 3.8)
project(Program3)

set(CMAKE_C_STANDARD 11)

set(SOURCE_FILES main.c cmake-build-debug/CMakeFiles/random.h cmake-build-debug/CMakeFiles/Progress/pi_mc.c cmake-build-debug/CMakeFiles/pi_mc.c)
add_executable(Program3 ${SOURCE_FILES} cmake-build-debug/random.c cmake-build-debug/CMakeFiles/random.h cmake-build-debug/CMakeFiles/Progress/pi_mc.c cmake-build-debug/CMakeFiles/pi_mc.c)